[workspace]
resolver = "2"
members = [
    "lib",
    "macros",
]

[workspace.package]
authors = [
    "Ash Manning <ash@layertwolabs.com>",
]
edition = "2021"
license-file = "LICENSE.txt"
publish = false
version = "0.1.0"

[workspace.dependencies]
jsonrpsee = { version = "0.25.1", default-features = false }
