[package]
name = "l2l-openapi"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
jsonrpsee = { workspace = true }
l2l-openapi-macros = { path = "../macros" }
utoipa = "5"

[dev-dependencies]
anyhow = "1.0.72"
jsonrpsee = { workspace = true, features = ["macros", "server"] }
serde = { version = "1.0.179", features = ["derive"] }

[lib]
name = "l2l_openapi"
path = "lib.rs"