[package]
name = "l2l-openapi-macros"
authors.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
proc_macro_roids = "0.8"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
anyhow = "1.0.72"
jsonrpsee = { version = "0.20.0", features = ["macros", "server"] }
serde = { version = "1.0.179", features = ["derive"] }
utoipa = "4.2.3"

[lib]
name = "l2l_openapi_macros"
path = "lib.rs"
proc-macro = true